# capnproto-rust

capnp/: Cargo.toml
capnp-futures/: Cargo.toml
capnp-futures/src/: read_stream.rs  serialize.rs  write_queue.rs
capnp-futures/test/: Cargo.toml
capnp-rpc/: Cargo.toml  README.md
capnp-rpc/src/: forked_promise.rs  lib.rs  queued.rs  rpc.rs  split.rs  task_set.rs
capnp/src/: capability.rs
capnp/src/private/: capability.rs
