[package]

name = "capnp-rpc"
version = "0.9.0"
authors = [ "David Renshaw <dwrenshaw@sandstorm.io>" ]
build = "build.rs"
license = "MIT"
description = "implementation of the Cap'n Proto remote procedure call protocol"
repository = "https://github.com/dwrensha/capnproto-rust"
documentation = "http://docs.capnproto-rust.org/capnp_rpc/"
categories = ["network-programming"]

readme = "README.md"

[lib]

name = "capnp_rpc"
path = "src/lib.rs"

[build-dependencies]
capnpc = { version = "0.9.0", path = "../capnpc" }

[dependencies]
futures-preview = "0.3.0-alpha"
capnp-futures = { version = "0.9.0", path = "../capnp-futures" }
capnp = {version = "0.9.0", path = "../capnp"}

[[example]]
# prevent 'cargo test' from trying to build the examples
name = "dummy"
path = "examples/dummy.rs"
